--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
 				<div class="clients__grid">
 					<img src="https://static.wixstatic.com/media/914e21_5a7454e395164093b72a1cac43a8508e~mv2.jpg/v1/fill/w_270,h_172,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_5a7454e395164093b72a1cac43a8508e~mv2.jpg" alt="ine"/>
 					<img src="https://static.wixstatic.com/media/914e21_d878d1504c154b17a955ca0aebbd16d9~mv2.jpg/v1/fill/w_270,h_172,al_c,lg_1,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_d878d1504c154b17a955ca0aebbd16d9~mv2.jpg" alt="ine"/>
+					<img src="https://static.wixstatic.com/media/914e21_1dc914b45d4447ef99be096f0a46a08a~mv2.jpg/v1/fill/w_175,h_86,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_1dc914b45d4447ef99be096f0a46a08a~mv2.jpg" alt="ine"/>
 					<img src="https://static.wixstatic.com/media/914e21_8d45503919634934ba54b9a90b43c9be~mv2.gif" alt="ine"/>
 					<img src="https://static.wixstatic.com/media/914e21_28a39fb333a74a2f82abca5c85388f80~mv2.jpg/v1/fill/w_270,h_172,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_28a39fb333a74a2f82abca5c85388f80~mv2.jpg" alt="ine"/>
 					<img src="https://static.wixstatic.com/media/927a43_1709eeeddc96424fb5f42b767c20a1a3~mv2.png/v1/fill/w_270,h_98,al_c,q_85,usm_1.20_1.00_0.01,enc_auto/927a43_1709eeeddc96424fb5f42b767c20a1a3~mv2.png" alt="ine"/>
