--- a/index.html
+++ b/index.html
@@ -424,9 +424,117 @@
 
 		</div>
 
-		<div class="">
+		<div class="quote">
 			
 		</div>
+
+		<div class="why_we">
+			<div class="container-sm">
+				<h1>¿Por qué nosotros?</h1>
+				<hr>
+	
+				<div class="why_we__grid">
+
+					<div class="why_we__grid__content">
+
+						<div class="why_we__grid__content__logo">
+							<img src="https://static.wixstatic.com/media/914e21_db5af6856e614519bb1dc260b35d0293~mv2.gif" alt="transport"/>
+						</div>
+						<p>Aseguramos tu carga</p>
+
+					</div>
+
+					<div class="why_we__grid__content">
+
+						<div class="why_we__grid__content__logo">
+							<img src="https://static.wixstatic.com/media/914e21_cec1dfc0969046d39130fea15634754e~mv2.gif" alt="transport"/>
+						</div>
+						<p>14 años de experiencia</p>
+
+					</div>
+
+					<div class="why_we__grid__content">
+
+						<div class="why_we__grid__content__logo">
+							<img src="https://static.wixstatic.com/media/914e21_7390aba877784df5b930d0f62facb36e~mv2.gif" alt="transport"/>
+						</div>
+						<p>Fletes urgentes</p>
+
+					</div>
+
+					<div class="why_we__grid__content">
+
+						<div class="why_we__grid__content__logo">
+							<img src="https://static.wixstatic.com/media/914e21_860f0ec69f9c410bbeb97a03d7ce0298~mv2.gif" alt="transport"/>
+						</div>
+						<p>Unidades monitoreadas vía GPS</p>
+
+					</div>
+	
+					<div class="why_we__grid__content">
+
+						<div class="why_we__grid__content__logo">
+							<img src="https://static.wixstatic.com/media/914e21_13a02b03e9ff45b78066527163e0ae5c~mv2.gif" alt="transport"/>
+						</div>
+						<p>Especializados en maniobras</p>
+
+					</div>
+				</div>
+			</div>
+			
+
+		</div>
+
+		<div class="urgent">
+
+			<div class="container-sm">
+
+				<div class="urgent__logo">
+					<svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+					width="512.000000pt" height="512.000000pt" viewBox="0 0 512.000000 512.000000"
+					preserveAspectRatio="xMidYMid meet">
+
+					<g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)"
+					fill="#FFCB00" stroke="none">
+					<path d="M884 3596 c-28 -28 -34 -42 -34 -76 0 -34 6 -48 34 -76 l34 -34 1232
+					0 c981 0 1231 -3 1228 -12 -3 -7 -112 -487 -244 -1065 l-238 -1053 -276 0
+					-275 0 -23 68 c-32 90 -71 149 -147 220 -208 195 -538 189 -741 -14 -63 -62
+					-127 -173 -140 -240 l-6 -34 -185 0 c-107 0 -192 -4 -204 -10 -44 -24 -64
+					-114 -33 -158 32 -46 61 -52 248 -52 l174 0 7 -33 c35 -161 203 -326 380 -373
+					69 -19 219 -18 286 2 172 51 310 183 364 352 l17 52 645 -2 645 -3 18 -52 c32
+					-90 72 -152 140 -216 113 -106 215 -147 370 -147 160 0 262 42 376 155 72 71
+					103 119 135 210 l17 50 105 5 c94 4 108 8 131 29 14 13 30 38 35 55 5 17 44
+					218 86 446 73 394 77 420 72 520 -11 219 -107 428 -271 594 -119 120 -276 212
+					-443 258 -73 20 -106 22 -480 26 -301 2 -403 6 -403 15 0 7 25 120 55 252 30
+					132 55 255 55 273 0 25 -9 43 -34 68 l-34 34 -1322 0 -1322 0 -34 -34z m3461
+					-850 c274 -81 479 -289 540 -549 23 -99 19 -149 -45 -490 -91 -484 -76 -429
+					-116 -425 -34 3 -36 6 -57 68 -72 215 -277 360 -507 360 -230 0 -435 -145
+					-507 -360 l-22 -65 -252 -3 -251 -2 4 22 c2 13 78 348 169 746 l164 723 410
+					-4 c354 -3 418 -6 470 -21z m-2407 -1286 c26 -12 68 -42 94 -67 63 -62 91
+					-129 92 -219 1 -62 -3 -79 -34 -140 -99 -194 -342 -233 -496 -80 -111 111
+					-124 269 -35 400 60 86 173 140 274 131 33 -3 80 -14 105 -25z m2347 1 c108
+					-48 185 -165 185 -281 0 -36 -7 -87 -16 -113 -21 -61 -93 -141 -158 -175 -44
+					-23 -63 -27 -136 -27 -73 0 -92 4 -136 27 -65 34 -137 114 -158 175 -60 175
+					44 368 221 413 52 13 146 4 198 -19z"/>
+					<path d="M456 3172 c-34 -37 -43 -89 -22 -130 32 -62 29 -62 526 -62 497 0
+					494 0 526 62 21 41 12 93 -22 130 l-28 28 -476 0 -476 0 -28 -28z"/>
+					<path d="M257 2549 c-43 -25 -61 -114 -31 -157 37 -53 30 -52 629 -52 612 0
+					598 -1 631 62 21 41 12 93 -22 130 l-28 28 -580 0 c-376 -1 -587 -4 -599 -11z"/>
+					<path d="M29 1891 c-24 -25 -29 -38 -29 -78 0 -42 5 -54 31 -79 l30 -29 675
+					-3 c744 -3 716 -5 750 60 21 41 12 93 -22 130 l-28 28 -689 0 -689 0 -29 -29z"/>
+					</g>
+					</svg>
+				</div>
+
+				<h1>FLETES URGENTES EN MENOS DE 24 HORAS </h1>
+
+				<a class="urgent__button">CONTACTANOS</a>
+
+			</div>
+
+		</div>
+
+		<div class="imagen"></div>
 
 
 	</main>
