--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="icon" type="image/x-icon" href="https://static.wixstatic.com/media/914e21_aa6092888cf347b180df6bdedd105bcd~mv2.png/v1/fill/w_32%2Ch_32%2Clg_1%2Cusm_0.66_1.00_0.01/914e21_aa6092888cf347b180df6bdedd105bcd~mv2.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Fletera frausto - fletes a todo México</title>
+	<title>FLETERA FRAUSTRO | FLETES A TODO MÉXICO</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
