--- a/cobertura.html
+++ b/cobertura.html
@@ -94,10 +94,10 @@
 			</div>
 
 			<div class="header__desktop__medium">
-				<a href="" class="header__desktop__medium__bottom--active">INICIO</a>
+				<a href="" class="header__desktop__medium__bottom">INICIO</a>
 				<a href="" class="header__desktop__medium__bottom">UNIDADES</a>
 				<a href="" class="header__desktop__medium__bottom">NUESTROS SERICIOS</a>
-				<a href="" class="header__desktop__medium__bottom">COBERTURA</a>
+				<a href="" class="header__desktop__medium__bottom--active">COBERTURA</a>
 				<a href='https://api.whatsapp.com/send?phone=5215561111917&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n' class="header__desktop__medium__bottom" style="border-right-color:transparent ;">CONTACTO</a>
 			</div>
 
@@ -199,8 +199,8 @@
 
 			<div class="hero_cobertura__banner_top">
 				<div class="container-sm">
-					<h1>Fletes industriales
-						COBERTURA</h1>
+					<h1>Fletes industriales</h1>
+						<h1>COBERTURA</h1>
 					<hr>
 				</div>
 			</div>
