--- a/cobertura.html
+++ b/cobertura.html
@@ -98,7 +98,7 @@
 				<a href="" class="header__desktop__medium__bottom">UNIDADES</a>
 				<a href="" class="header__desktop__medium__bottom">NUESTROS SERICIOS</a>
 				<a href="" class="header__desktop__medium__bottom--active">COBERTURA</a>
-				<a href='https://api.whatsapp.com/send?phone=5215561111917&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n' class="header__desktop__medium__bottom" style="border-right-color:transparent ;">CONTACTO</a>
+				<a href='https://api.whatsapp.com/send?phone=5215561111917&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n' target="_blank" class="header__desktop__medium__bottom" style="border-right-color:transparent ;">CONTACTO</a>
 			</div>
 
 			<div class="container-sm">
@@ -122,7 +122,7 @@
 			<a href="./units.html">UNIDADES</a><hr>
 			<a href="">NUESTROS SERVICIOS</a><hr>
 			<a href="">COBERTURA</a><hr>
-			<a href="">CONTACTO</a>
+			<a href='https://api.whatsapp.com/send?phone=5215561111917&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n' target="_blank">CONTACTO</a>
 		</div>
 
 	</nav>
