--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 			</div>
 
 			<div class="header__desktop__medium">
-				<a href="" class="header__desktop__medium__bottom--active">INICIO</a>
-				<a href="" class="header__desktop__medium__bottom">UNIDADES</a>
-				<a href="" class="header__desktop__medium__bottom">NUESTROS SERICIOS</a>
-				<a href="" class="header__desktop__medium__bottom">COBERTURA</a>
+				<a href="./index.html" class="header__desktop__medium__bottom">INICIO</a>
+				<a href="./unidades.html" class="header__desktop__medium__bottom">UNIDADES</a>
+				<a href="./nuestros-servicios.html" class="header__desktop__medium__bottom">NUESTROS SERICIOS</a>
+				<a href="./cobertura.html" class="header__desktop__medium__bottom--active">COBERTURA</a>
 				<a href='https://api.whatsapp.com/send?phone=5215561111917&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n' target="_blank" class="header__desktop__medium__bottom" style="border-right-color:transparent ;">CONTACTO</a>
 			</div>
 
@@ -118,10 +118,10 @@
 	<nav role="menu" class="menu">
 
 		<div class="container">
-			<a href="">INICIO</a><hr>
-			<a href="">UNIDADES</a><hr>
-			<a href="">NUESTROS SERVICIOS</a><hr>
-			<a href="">COBERTURA</a><hr>
+			<a href="./index.html">INICIO</a><hr>
+			<a href="./unidades.html">UNIDADES</a><hr>
+			<a href="./nuestros-servicios.html">NUESTROS SERVICIOS</a><hr>
+			<a href="./cobertura.html">COBERTURA</a><hr>
 			<a href='https://api.whatsapp.com/send?phone=5215561111917&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n' target="_blank">CONTACTO</a>
 		</div>
 
