--- a/plantilla.html
+++ b/plantilla.html
@@ -119,9 +119,9 @@
 
 		<div class="container">
 			<a href="./index.html">INICIO</a><hr>
-			<a href="./units.html">UNIDADES</a><hr>
-			<a href="">NUESTROS SERVICIOS</a><hr>
-			<a href="">COBERTURA</a><hr>
+			<a href="./unidades.html">UNIDADES</a><hr>
+			<a href="./nuestros-servicios.html">NUESTROS SERVICIOS</a><hr>
+			<a href="./cobertura.html">COBERTURA</a><hr>
 			<a href="">CONTACTO</a>
 		</div>
 
