--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 					<div class="swiper-slide experts__form--video">
 
 						<video autoPlay muted playsInline loop >
-							<source src='/img/experts_3.mp4' type="video/mp4" />
+							<source src='./img/experts_3.mp4' type="video/mp4" />
 						</video>
 						
 						<h1>EXPERTOS EN <span>FLETES</span></h1>
