--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
 				<a href='https://api.whatsapp.com/send?phone=5215561111917&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n' target="_blank" class="header__desktop__medium__bottom" style="border-right-color:transparent ;">CONTACTO</a>
 			</div>
 
-			<div class="container-sm">
+			<!-- <div class="container-sm">
 				<div class="header__desktop__bottom">
 					<p>Aseguramos tu carga</p>
 					<p>¡NO MUDANZAS NI CONSOLIDADOS!</p>
 					<p>Movemos CARGAS Y FLETES a partir de 8 TONELADAS</p>
 					<p class="green">No se hacen fletes locales</p>
 				</div>
-			</div>
+			</div> -->
 
 		</div>
 
@@ -463,18 +463,6 @@
 
 		</div>
 
-		<div class="price">
-			<div class="container-sm">
-				<h1>Cotiza ahora un flete</h1>
-				<div class="price__text">
-					<h1>¡LLAMANOS!</h1>
-					<a href="tel:5620055311">TEL: 56 2005 5311</a>
-				</div>
-
-			</div>
-
-		</div>
-
 		<div class="urgent">
 
 			<div class="container-sm">
@@ -547,6 +535,18 @@
 			
 		</div>
 
+		<div class="price">
+			<div class="container-sm">
+				<h1>Cotiza ahora un flete</h1>
+				<div class="price__text">
+					<h1>¡LLAMANOS!</h1>
+					<a href="tel:5620055311">TEL: 56 2005 5311</a>
+				</div>
+
+			</div>
+
+		</div>
+
 		<div class='service_home'>
 
 			<video autoPlay muted playsInline loop >
@@ -580,6 +580,15 @@
 
 	<!-- FOOTER -->
 	<footer class="footer">
+
+		<div class="container-sm">
+			<div class="header__desktop__bottom">
+				<p>Aseguramos tu carga</p>
+				<p>¡NO MUDANZAS NI CONSOLIDADOS!</p>
+				<p>Movemos CARGAS Y FLETES a partir de 8 TONELADAS</p>
+				<p class="green">No se hacen fletes locales</p>
+			</div>
+		</div>
 
 		<div class="container-sm">
 
