--- a/cobertura.html
+++ b/cobertura.html
@@ -99,16 +99,7 @@
 				<a href="./nuestros-servicios.html" class="header__desktop__medium__bottom">NUESTROS SERICIOS</a>
 				<a href="./cobertura.html" class="header__desktop__medium__bottom--active">COBERTURA</a>
 				<a href='https://api.whatsapp.com/send?phone=5215561111917&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n' target="_blank" class="header__desktop__medium__bottom" style="border-right-color:transparent ;">CONTACTO</a>
-			</div>
-
-			<div class="container-sm">
-				<div class="header__desktop__bottom">
-					<p>Aseguramos tu carga</p>
-					<p>¡NO MUDANZAS NI CONSOLIDADOS!</p>
-					<p>Movemos CARGAS Y FLETES a partir de 8 TONELADAS</p>
-					<p class="green">No se hacen fletes locales</p>
-				</div>
-			</div>
+			</div>W
 
 		</div>
 
@@ -784,6 +775,15 @@
 
 	<!-- FOOTER -->
 	<footer class="footer">
+
+		<div class="container-sm">
+			<div class="header__desktop__bottom">
+				<p>Aseguramos tu carga</p>
+				<p>¡NO MUDANZAS NI CONSOLIDADOS!</p>
+				<p>Movemos CARGAS Y FLETES a partir de 8 TONELADAS</p>
+				<p class="green">No se hacen fletes locales</p>
+			</div>
+		</div>
 
 		<div class="container-sm">
 
