--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
 		<div class="quote">
 			<div class="container-sm">
-				<h1>Nuestros servicios </h1>
+				<h1>Fletes Especializados a todo México </h1>
 				<p>Unidades seguras, limpias y rastreadas vía GPS todo el tiempo</p>
 				<hr>
 	
