--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 						<source src='./img/experts_1.mp4' type="video/mp4" />
 					</video>
 		
-					<h1><span>¿FLETES ESPECIALIZADOS?</span> EN FLETERA FRAUSTO CONTAMOS CON LOWBOY, PLATAFORMA, TORTON, HIAP,CAMA BAJA, TRAILER FULL, Y MÁS PARA SATISFACER TUS REQUERIMIENTOS DE CARGA PESADA, VOLUMINOSA, O ESPECIALIZADA.</h1>
+					<h1><span>¿FLETES ESPECIALIZADOS?</span> CONTAMOS CON LOWBOY, PLATAFORMA, TORTON, HIAB, CAMA BAJA, TRAILER FULL; TODO PARA CARGA PESADA, VOLUMINOSA, O ESPECIALIZADA. </h1>
 
 					<button class="experts__form__button">COTIZAR</button>
 
@@ -229,7 +229,7 @@
 						<source src='./img/experts_3.mp4' type="video/mp4" />
 					</video>
 					
-					<h1>¡CONFÍA A FLETERA FRAUSTO TU VALIOSA CARGA!<span>LA ASEGURAMOS POR SOLO EL 1% DE SU VALOR</span>Y TU QUEDATE TRANQUILO</h1>
+					<h1>¡CONFÍA A FLETERA FRAUSTO TU VALIOSA CARGA! <span>LA ASEGURAMOS POR SOLO EL 1% DE SU VALOR </span>Y TU QUEDATE TRANQUILO</h1>
 
 					<button class="experts__form__button">COTIZAR</button>
 
