--- a/cobertura.html
+++ b/cobertura.html
@@ -871,7 +871,7 @@
 			<div class="footer__information">
 				<div class="footer__information__legal">
 					<p>© FLETERAFRAUSTO</p>
-					<a href="https://www.fleterafrausto.com/aviso-de-privacidad">Aviso de privacidad</a>
+					<a href="./aviso-privacidad.html">Aviso de privacidad</a>
 				</div>
 				<p class="text">Las marcas registradas y logotipos mostrados en este sitio web, son propiedad de sus respectivos propietarios y titulares; y son utilizados únicamente con fines enunciativos.</p>
 			</div>
