--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 				<div class="chat_whatsApp__agent__target__information">
 					<div class="chat_whatsApp__agent__target__information__imagen">
-						<img src="./img/person-one.jpg" alt="imagen_person"/>
+						<img src="./img/person-men-one.png" alt="imagen_person"/>
 					</div>
 	
 					<div class="chat_whatsApp__agent__target__information__word">
@@ -210,7 +210,7 @@
 
 				<div class="chat_whatsApp__agent__target__information">
 					<div class="chat_whatsApp__agent__target__information__imagen">
-						<img src="./img/woman.jpg" alt="imagen_person"/>
+						<img src="./img/person-woman.png" alt="imagen_person"/>
 					</div>
 	
 					<div class="chat_whatsApp__agent__target__information__word">
@@ -231,7 +231,7 @@
 
 				<div class="chat_whatsApp__agent__target__information">
 					<div class="chat_whatsApp__agent__target__information__imagen">
-						<img src="./img/person-one.jpg" alt="imagen_person"/>
+						<img src="./img/person-men-two.png" alt="imagen_person"/>
 					</div>
 	
 					<div class="chat_whatsApp__agent__target__information__word">
@@ -252,7 +252,7 @@
 
 				<div class="chat_whatsApp__agent__target__information">
 					<div class="chat_whatsApp__agent__target__information__imagen">
-						<img src="./img/woman.jpg" alt="imagen_person"/>
+						<img src="./img/person-woman.png" alt="imagen_person"/>
 					</div>
 	
 					<div class="chat_whatsApp__agent__target__information__word">
