--- a/unidades.html
+++ b/unidades.html
@@ -190,7 +190,7 @@
 
 				<div class="chat_whatsApp__agent__target__information">
 					<div class="chat_whatsApp__agent__target__information__imagen">
-						<img src="./img/person-one.jpg" alt="imagen_person"/>
+						<img src="./img/person-men-one.png" alt="imagen_person"/>
 					</div>
 	
 					<div class="chat_whatsApp__agent__target__information__word">
@@ -211,7 +211,7 @@
 
 				<div class="chat_whatsApp__agent__target__information">
 					<div class="chat_whatsApp__agent__target__information__imagen">
-						<img src="./img/woman.jpg" alt="imagen_person"/>
+						<img src="./img/person-woman.png" alt="imagen_person"/>
 					</div>
 	
 					<div class="chat_whatsApp__agent__target__information__word">
@@ -232,7 +232,7 @@
 
 				<div class="chat_whatsApp__agent__target__information">
 					<div class="chat_whatsApp__agent__target__information__imagen">
-						<img src="./img/person-one.jpg" alt="imagen_person"/>
+						<img src="./img/person-men-two.png" alt="imagen_person"/>
 					</div>
 	
 					<div class="chat_whatsApp__agent__target__information__word">
@@ -253,7 +253,7 @@
 
 				<div class="chat_whatsApp__agent__target__information">
 					<div class="chat_whatsApp__agent__target__information__imagen">
-						<img src="./img/woman.jpg" alt="imagen_person"/>
+						<img src="./img/person-woman.png" alt="imagen_person"/>
 					</div>
 	
 					<div class="chat_whatsApp__agent__target__information__word">
