--- a/cobertura.html
+++ b/cobertura.html
@@ -150,7 +150,7 @@
 
 	<nav role="whats" class="layout_whatsapp">
 
-		<div class="layout_whatsapp__information">¡Hola!¿Necesitas ayuda?</div>
+		<div class="layout_whatsapp__information">¡Cotiza tu flete ahora!</div>
 
 		<button class="layout_whatsapp__button">
 
@@ -186,7 +186,7 @@
 
 		<div class="chat_whatsApp__agent">
 
-			<a href='https://api.whatsapp.com/send?phone=5635686848&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n' target="_blank" class="chat_whatsApp__agent__target">
+			<a href='https://api.whatsapp.com/send?phone=5635686848&text=Hola%20quiero%20cotizar%20mi%20flete' target="_blank" class="chat_whatsApp__agent__target">
 
 				<div class="chat_whatsApp__agent__target__information">
 					<div class="chat_whatsApp__agent__target__information__imagen">
@@ -207,7 +207,7 @@
 
 			</a>
 
-			<a href='https://api.whatsapp.com/send?phone=5563534733&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n' target="_blank" class="chat_whatsApp__agent__target">
+			<a href='https://api.whatsapp.com/send?phone=5563534733&text=Hola%20quiero%20cotizar%20mi%20flete' target="_blank" class="chat_whatsApp__agent__target">
 
 				<div class="chat_whatsApp__agent__target__information">
 					<div class="chat_whatsApp__agent__target__information__imagen">
