--- a/cobertura.html
+++ b/cobertura.html
@@ -45,7 +45,7 @@
 					</button>
 				
 					<div class="header__mobile__top__logo">
-						<img src="img/logo.png" />
+						<img src="img/logo.png" alt ="logo-header" />
 					</div>
 				</div>
 				
@@ -123,10 +123,10 @@
 			</div>
 
 			<div class="header__desktop__medium">
-				<a href="./index.html" class="header__desktop__medium__bottom--active">INICIO</a>
+				<a href="./index.html" class="header__desktop__medium__bottom">INICIO</a>
 				<a href="./unidades.html" class="header__desktop__medium__bottom">UNIDADES</a>
 				<a href="./nuestros-servicios.html" class="header__desktop__medium__bottom">NUESTROS SERICIOS</a>
-				<a href="./cobertura.html" class="header__desktop__medium__bottom">COBERTURA</a>
+				<a href="./cobertura.html" class="header__desktop__medium__bottom--active">COBERTURA</a>
 				<a href='https://api.whatsapp.com/send?phone=5563534733&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n' target="_blank" class="header__desktop__medium__bottom" style="border-right-color:transparent ;">CONTACTO</a>
 			</div>
 
@@ -194,7 +194,7 @@
 					</div>
 	
 					<div class="chat_whatsApp__agent__target__information__word">
-						<h5>Eduardo</h5>
+						<h1>Eduardo</h1>
 						<p>Ventas</p>
 					</div>
 				</div>
@@ -215,7 +215,7 @@
 					</div>
 	
 					<div class="chat_whatsApp__agent__target__information__word">
-						<h5>Alberto</h5>
+						<h1>Alberto</h1>
 						<p>Ventas</p>
 					</div>
 				</div>
@@ -937,7 +937,7 @@
 						contacto@fletesurgentesmexico.com
 					</a>
 
-					<a class="footer__contact__email_location__item">
+					<div class="footer__contact__email_location__item">
 						<div class="footer__contact__email_location__item__icon">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
 								<path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
@@ -945,7 +945,7 @@
 						</div>
 
 						Resina 237, Iztacalco
-					</a>
+					</div>
 				</div>
 
 			</div>
