--- a/aviso-privacidad.html
+++ b/aviso-privacidad.html
@@ -44,7 +44,7 @@
 					</button>
 				
 					<div class="header__mobile__top__logo">
-						<img src="img/logo.png" />
+						<img src="img/logo.png" alt ="logo-header" />
 					</div>
 				</div>
 				
@@ -193,7 +193,7 @@
 					</div>
 	
 					<div class="chat_whatsApp__agent__target__information__word">
-						<h5>Eduardo</h5>
+						<h1>Eduardo</h1>
 						<p>Ventas</p>
 					</div>
 				</div>
@@ -214,7 +214,7 @@
 					</div>
 	
 					<div class="chat_whatsApp__agent__target__information__word">
-						<h5>Alberto</h5>
+						<h1>Alberto</h1>
 						<p>Ventas</p>
 					</div>
 				</div>
@@ -346,7 +346,7 @@
 						contacto@fletesurgentesmexico.com
 					</a>
 
-					<a class="footer__contact__email_location__item">
+					<div class="footer__contact__email_location__item">
 						<div class="footer__contact__email_location__item__icon">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
 								<path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
@@ -354,7 +354,7 @@
 						</div>
 
 						Resina 237, Iztacalco
-					</a>
+					</div>
 				</div>
 
 			</div>
