--- a/aviso-privacidad.html
+++ b/aviso-privacidad.html
@@ -39,7 +39,7 @@
 
 				<div class="header__mobile__top">
 
-					<button class="header__mobile__top__toggle" type="button">
+					<button class="header__mobile__top__toggle" type="button" name="Button_menu">
 						<span class="header__mobile__top__toggle__bar"></span>
 					</button>
 				
@@ -59,7 +59,7 @@
 				
 				<div class="header__desktop__top">
 					<div class="header__desktop__top__logo">
-						<img src="img/logo.png" />
+						<img src="img/logo.png" alt="logo_desktop" />
 					</div>
 
 					<div class="header__desktop__top__contact">
@@ -122,8 +122,8 @@
 			</div>
 
 			<div class="header__desktop__medium">
-				<a href="./index.html" class="header__desktop__medium__bottom--active">INICIO</a>
-				<a href="./unidades.html" class="header__desktop__medium__bottom">UNIDADES</a>
+				<a href="./index.html" class="header__desktop__medium__bottom">INICIO</a>
+				<a href="./unidades.html" class="header__desktop__medium__bottom--active">UNIDADES</a>
 				<a href="./nuestros-servicios.html" class="header__desktop__medium__bottom">NUESTROS SERICIOS</a>
 				<a href="./cobertura.html" class="header__desktop__medium__bottom">COBERTURA</a>
 				<a href='https://api.whatsapp.com/send?phone=5563534733&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n' target="_blank" class="header__desktop__medium__bottom" style="border-right-color:transparent ;">CONTACTO</a>
@@ -147,7 +147,7 @@
 
 	</nav>
 
-	<nav role="whats" class="layout_whatsapp">
+	<nav role="whatsApp" class="layout_whatsapp">
 
 		<div class="layout_whatsapp__information">¡Cotiza tu flete ahora!</div>
 
