--- a/nuestros-servicios.html
+++ b/nuestros-servicios.html
@@ -148,7 +148,7 @@
 
 	</nav>
 
-	<nav role="whatsApp" class="layout_whatsapp">
+	<nav role="button" class="layout_whatsapp">
 
 		<div class="layout_whatsapp__information">¡Cotiza tu flete ahora!</div>
 
@@ -168,7 +168,7 @@
 		</button>
 	</nav>
 
-	<nav role="chat_whatsApp" class="chat_whatsApp">
+	<nav role="button" class="chat_whatsApp">
 
 		<div class="chat_whatsApp__top">
 			<div class="chat_whatsApp__top__logo">
