--- a/index.html
+++ b/index.html
@@ -614,16 +614,16 @@
 				<h1>Nuestros Clientes</h1>
 				<hr>
 				<div class="clients__grid">
-					<img src="./img/ine.jpg" alt="ine" width="100%" height="100%"/>
-					<img src="./img/CONSTRUIDEA.jpg" alt="ine" width="100%" height="100%"/>
+					<img src="./img/ine.jpg" alt="ine" />
+					<img src="./img/CONSTRUIDEA.jpg" alt="ine"/>
 					<img src="./img/PEMEX.jpg" alt="ine" width="100%" height="100%"/>
-					<img src="./img/Carso-Infraestructura-y-Construccion.gif" alt="ine"  width="100%" height="100%"/>
+					<img src="./img/Carso-Infraestructura-y-Construccion.gif" alt="ine" />
 					<img src="./img/CFE.jpg" alt="ine"/>
-					<img src="./img/dewalt-logo-6-1.png" alt="ine"  width="100%" height="100%"/>
-					<img src="./img/cat.jpg" alt="ine"  width="100%" height="100%"/>
-					<img src="./img/sodimac.png" alt="ine"  width="100%" height="100%"/>
-					<img src="./img/logo-werner-400x84.png" alt="ine"  width="80%" height="60%"/>
-					<img src="./img/download (2).jpg" alt="ine"  width="80%" height="60%"/>
+					<img src="./img/dewalt-logo-6-1.png" alt="ine" >
+					<img src="./img/cat.jpg" alt="ine"  />
+					<img src="./img/sodimac.png" alt="ine" />
+					<img src="./img/logo-werner-400x84.png" alt="ine" />
+					<img src="./img/download (2).jpg" alt="ine" />
 				</div>
 			</div>
 			
@@ -642,55 +642,55 @@
 						<!-- Slides -->
 						<div class="swiper-slide clients_movil__form">
 							<div class="clients_movil__form--img">
-								<img src="./img/ine.jpg" alt="ine" width="100%" height="100%"/>
+								<img src="./img/ine.jpg" alt="ine" width="100%" height="auto"/>
 							</div>
 						</div>
 						
 						<div class="swiper-slide clients_movil__form">
 							<div class="clients_movil__form--img">
-								<img src="./img/CONSTRUIDEA.jpg" alt="ine" width="100%" height="100%"/>	
+								<img src="./img/CONSTRUIDEA.jpg" alt="ine" width="100%" height="auto"/>	
 							</div>					
 						</div>
 
 						<div class="swiper-slide clients_movil__form">
 							<div class="clients_movil__form--img">
-								<img src="./img/PEMEX.jpg" alt="ine" width="100%" height="100%"/>
+								<img src="./img/PEMEX.jpg" alt="ine"width="100%" height="auto"/>
 							</div>
 						</div>
 
 						<div class="swiper-slide clients_movil__form">
 							<div class="clients_movil__form--img">
-								<img src="./img/Carso-Infraestructura-y-Construccion.gif" alt="ine" width="100%" height="100%"/>
+								<img src="./img/Carso-Infraestructura-y-Construccion.gif" alt="ine" width="100%" height="auto"/>
 							</div>
 						</div>
 
 						<div class="swiper-slide clients_movil__form">
 							<div class="clients_movil__form--img">
-								<img src="./img/CFE.jpg" alt="ine" width="100%" height="100%"/>
+								<img src="./img/CFE.jpg" alt="ine" width="100%" height="auto"/>
 							</div>
 						</div>
 
 						<div class="swiper-slide clients_movil__form">
 							<div class="clients_movil__form--img">
-								<img src="./img/dewalt-logo-6-1.png" alt="ine" width="100%" height="100%"/>
+								<img src="./img/dewalt-logo-6-1.png" alt="ine" width="100%" height="auto"/>
 							</div>
 						</div>
 
 						<div class="swiper-slide clients_movil__form">
 							<div class="clients_movil__form--img">
-								<img src="./img/cat.jpg" alt="ine" width="100%" height="100%"/>
+								<img src="./img/cat.jpg" alt="ine" width="100%" height="auto"/>
 							</div>
 						</div>
 
 						<div class="swiper-slide clients_movil__form">
 							<div class="clients_movil__form--img">
-								<img src="./img/sodimac.png" alt="ine" width="100%" height="100%"/>
+								<img src="./img/sodimac.png" alt="ine" width="100%" height="auto"/>
 							</div>
 						</div>
 
 						<div class="swiper-slide clients_movil__form">
 							<div class="clients_movil__form--img">
-								<img src="./img/logo-werner-400x84.png" alt="ine" width="100%" height="100%"/>
+								<img src="./img/logo-werner-400x84.png" alt="ine" width="100%" height="auto"/>
 							</div>
 						</div>
 
