--- a/aviso-privacidad.html
+++ b/aviso-privacidad.html
@@ -8,7 +8,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Aviso de Privacidad | Fletes frausto </title>
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -58,7 +57,7 @@
 				
 				<div class="header__desktop__top">
 					<div class="header__desktop__top__logo">
-						<img src="img/logo.png" alt="logo_desktop" width="100%" height="100%"/>
+						<img src="img/logo.png" alt="logo_desktop"/>
 					</div>
 
 					<div class="header__desktop__top__contact">
@@ -376,7 +375,8 @@
 		</hr>
 
 	</footer>
-
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<script src="./js/whatsApp.js"></script>
 	<script src="./js/menu.js"></script>
 
