--- a/cobertura.html
+++ b/cobertura.html
@@ -9,8 +9,6 @@
 	<title>COBERTURA | Fletera frausto - seguros de carga</title>
 	<meta name="description" content="Fletera Frausto está dedicada a fletes en toda la república mexicana, fletes urgentes , fletes en plataforma, seguros de carga por el 1% del valor de la mercancía. ¡COTIZA HOY MISMO!"/>
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -60,7 +58,7 @@
 				
 				<div class="header__desktop__top">
 					<div class="header__desktop__top__logo">
-						<img src="img/logo.png" alt="logo_desktop" width="100%" height="100%"/>
+						<img src="img/logo.png" alt="logo_desktop"/>
 					</div>
 
 					<div class="header__desktop__top__contact">
@@ -969,6 +967,7 @@
 
 	</footer>
 	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 	<script src="./js/whatsApp.js"></script>
 	<script src="./js/menu.js"></script>
