--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<title>Fletera frausto - fletes a todo México</title>
 	<meta name="description" content="Fletera Frausto, fletes rápidos y seguros en toda la república mexicana, fletes urgentes, fletes en plataforma, fletes foráneos, fletes en 24 hrs, seguros de carga por el 1% del valor de la mercancía. ¡CONTACTANOS!" />
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -58,7 +59,7 @@
 				
 				<div class="header__desktop__top">
 					<div class="header__desktop__top__logo">
-						<img src="img/logo.png" alt="logo_desktop" width="100%" height="100%"/>
+						<img src="img/logo.png" alt="logo_desktop">
 					</div>
 
 					<div class="header__desktop__top__contact">
@@ -616,7 +617,7 @@
 				<div class="clients__grid">
 					<img src="./img/ine.jpg" alt="ine" />
 					<img src="./img/CONSTRUIDEA.jpg" alt="ine"/>
-					<img src="./img/PEMEX.jpg" alt="ine" width="100%" height="100%"/>
+					<img src="./img/PEMEX.jpg" alt="ine"/>
 					<img src="./img/Carso-Infraestructura-y-Construccion.gif" alt="ine" />
 					<img src="./img/CFE.jpg" alt="ine"/>
 					<img src="./img/dewalt-logo-6-1.png" alt="ine" >
@@ -922,7 +923,7 @@
 	</footer>
 
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 	<script src="./js/menu.js"></script>
 	<script src="./js/whatsApp.js"></script>
