--- a/nuestros-servicios.html
+++ b/nuestros-servicios.html
@@ -9,7 +9,6 @@
 	<title>NUESTROS SERVICIOS | Fletera frausto - fletes méxico</title>
 	<meta name="description" content="Fletera Frausto está dedicada a fletes en toda la república mexicana, fletes urgentes , fletes en plataforma, seguros de carga por el 1% del valor de la mercancía. ¡COTIZA HOY MISMO!" />
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -59,7 +58,7 @@
 				
 				<div class="header__desktop__top">
 					<div class="header__desktop__top__logo">
-						<img src="img/logo.png" alt="logo_desktop" width="100%" height="100%"/>
+						<img src="img/logo.png" alt="logo_desktop"/>
 					</div>
 
 					<div class="header__desktop__top__contact">
@@ -490,7 +489,8 @@
 		</hr>
 
 	</footer>
-
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 	<script src="./js/whatsApp.js"></script>
 	<script src="./js/menu.js"></script>
