--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<title>Fletera frausto - fletes a todo México</title>
 	<meta name="description" content="Fletera Frausto, fletes rápidos y seguros en toda la república mexicana, fletes urgentes, fletes en plataforma, fletes foráneos, fletes en 24 hrs, seguros de carga por el 1% del valor de la mercancía. ¡CONTACTANOS!" />
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+	
 
 
 	<!-- Google Tag Manager -->
@@ -922,8 +925,7 @@
 
 	</footer>
 
-
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+	
 	<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 	<script src="./js/menu.js"></script>
 	<script src="./js/whatsApp.js"></script>
