--- a/cobertura.html
+++ b/cobertura.html
@@ -58,7 +58,7 @@
 				
 				<div class="header__desktop__top">
 					<div class="header__desktop__top__logo">
-						<img src="img/logo.png" alt="logo_desktop"/>
+						<img src="img/logo.png" alt="logo_desktop" width="100%" height="90%"/>
 					</div>
 
 					<div class="header__desktop__top__contact">
@@ -134,7 +134,7 @@
 	</header>
 
 	<!-- MENU -->
-	<nav role="menu" class="menu">
+	<nav  class="menu">
 
 		<div class="container">
 			<a href="./index.html">INICIO</a><hr>
