--- a/aviso-privacidad.html
+++ b/aviso-privacidad.html
@@ -57,7 +57,7 @@
 				
 				<div class="header__desktop__top">
 					<div class="header__desktop__top__logo">
-						<img src="img/logo.png" alt="logo_desktop"/>
+						<img src="img/logo.png" alt="logo_desktop"  width="100%" height="90%"/>
 					</div>
 
 					<div class="header__desktop__top__contact">
@@ -133,7 +133,7 @@
 	</header>
 
 	<!-- MENU -->
-	<nav role="menu" class="menu">
+	<nav  class="menu">
 
 		<div class="container">
 			<a href="./index.html">INICIO</a><hr>
@@ -375,7 +375,7 @@
 		</hr>
 
 	</footer>
-	
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<script src="./js/whatsApp.js"></script>
 	<script src="./js/menu.js"></script>
