--- a/nuestros-servicios.html
+++ b/nuestros-servicios.html
@@ -58,7 +58,7 @@
 				
 				<div class="header__desktop__top">
 					<div class="header__desktop__top__logo">
-						<img src="img/logo.png" alt="logo_desktop"/>
+						<img src="img/logo.png" alt="logo_desktop" width="100%" height="90%"/>
 					</div>
 
 					<div class="header__desktop__top__contact">
@@ -134,7 +134,7 @@
 	</header>
 
 	<!-- MENU -->
-	<nav role="menu" class="menu">
+	<nav  class="menu">
 
 		<div class="container">
 			<a href="./index.html">INICIO</a><hr>
@@ -489,7 +489,7 @@
 		</hr>
 
 	</footer>
-	
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 	<script src="./js/whatsApp.js"></script>
