--- a/plantilla.html
+++ b/plantilla.html
@@ -115,7 +115,7 @@
 	</header>
 
 	<!-- MENU -->
-	<nav role="menu" class="menu">
+	<nav  class="menu">
 
 		<div class="container">
 			<a href="./index.html">INICIO</a><hr>
