--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
 				<div class="header__mobile__top">
 
-					<button class="header__mobile__top__toggle" type="button" name="button">
+					<button class="header__mobile__top__toggle" type="button" id="whastApp">
 						<span class="header__mobile__top__toggle__bar"></span>
 					</button>
 				
 					<div class="header__mobile__top__logo">
-						<img src="img/logo.png" alt ="logo-header" width="100%" height="100%" />
+						<img src="img/logo.png" alt ="logo-header" width="100%" height="80%" />
 					</div>
 				</div>
 				
@@ -618,16 +618,16 @@
 				<h1>Nuestros Clientes</h1>
 				<hr>
 				<div class="clients__grid">
-					<img src="./img/ine.jpg" alt="ine" />
-					<img src="./img/CONSTRUIDEA.jpg" alt="ine"/>
-					<img src="./img/PEMEX.jpg" alt="ine"/>
-					<img src="./img/Carso-Infraestructura-y-Construccion.gif" alt="ine" />
-					<img src="./img/CFE.jpg" alt="ine"/>
-					<img src="./img/dewalt-logo-6-1.png" alt="ine" >
-					<img src="./img/cat.jpg" alt="ine"  />
-					<img src="./img/sodimac.png" alt="ine" />
-					<img src="./img/logo-werner-400x84.png" alt="ine" />
-					<img src="./img/download (2).jpg" alt="ine" />
+					<img src="./img/ine.jpg" alt="ine" width="100%" height="100%"/>
+					<img src="./img/CONSTRUIDEA.jpg" alt="ine" width="100%" height="100%"/>
+					<img src="./img/PEMEX.jpg" alt="ine" width="100%" height="50%"/>
+					<img src="./img/Carso-Infraestructura-y-Construccion.gif" alt="ine" width="100%" height="100%"/>
+					<img src="./img/CFE.jpg" alt="ine" width="100%" height="80%"/>
+					<img src="./img/dewalt-logo-6-1.png" alt="ine" width="100%" height="80%" />
+					<img src="./img/cat.jpg" alt="ine"  width="100%" height="100%" />
+					<img src="./img/sodimac.png" alt="ine" width="100%" height="50%" />
+					<img src="./img/logo-werner-400x84.png" alt="ine"  width="100%" height="50%" />
+					<img src="./img/download (2).jpg" alt="ine" width="100%" height="50%" />
 				</div>
 			</div>
 			
