--- a/unidades.html
+++ b/unidades.html
@@ -38,12 +38,12 @@
 
 				<div class="header__mobile__top">
 
-					<button class="header__mobile__top__toggle" type="button" name="button">
+					<button class="header__mobile__top__toggle" type="button" id="whastApp">
 						<span class="header__mobile__top__toggle__bar"></span>
 					</button>
 				
 					<div class="header__mobile__top__logo">
-						<img src="img/logo.png" alt ="logo-header" width="100%" height="100%"/>
+						<img src="img/logo.png" alt ="logo-header" width="100%" height="80%"/>
 					</div>
 				</div>
 				
