--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 					<div class="why_we__grid__content">
 
 						<div class="why_we__grid__content__logo">
-							<img src="./img/trabajos1.gif" alt="transport"/>
+							<img src="./img/trabajos1.gif" alt="transport" width="100%" height="100%"/>
 						</div>
 						<p>Aseguramos tu carga</p>
 
@@ -427,7 +427,7 @@
 					<div class="why_we__grid__content">
 
 						<div class="why_we__grid__content__logo">
-							<img src="./img/trabajos2.gif" alt="transport"/>
+							<img src="./img/trabajos2.gif" alt="transport" width="100%" height="100%"/>
 						</div>
 						<p>14 años de experiencia</p>
 
@@ -436,7 +436,7 @@
 					<div class="why_we__grid__content">
 
 						<div class="why_we__grid__content__logo">
-							<img src="./img/trabajo5.gif" alt="transport"/>
+							<img src="./img/trabajo5.gif" alt="transport" width="100%" height="100%"/>
 						</div>
 						<p>Fletes urgentes</p>
 
@@ -445,7 +445,7 @@
 					<div class="why_we__grid__content">
 
 						<div class="why_we__grid__content__logo">
-							<img src="./img/trabajo4.gif" alt="transport"/>
+							<img src="./img/trabajo4.gif" alt="transport" width="100%" height="100%"/>
 						</div>
 						<p>Unidades monitoreadas vía GPS</p>
 
@@ -454,7 +454,7 @@
 					<div class="why_we__grid__content">
 
 						<div class="why_we__grid__content__logo">
-							<img src="./img/trabajo3.gif" alt="transport"/>
+							<img src="./img/trabajo3.gif" alt="transport" width="100%" height="100%"/>
 						</div>
 						<p>Especializados en maniobras</p>
 
