--- a/index.html
+++ b/index.html
@@ -821,7 +821,6 @@
 
 	</main>
 
-	<!-- FOOTER -->
 	<footer class="footer">
 
 		<div class="container-sm">
@@ -866,7 +865,7 @@
 
 					
 
-					<a href="tel5635686848" class="footer__contact__phone__item">
+					<a href="tel:5635686848" class="footer__contact__phone__item">
 						<!-- Icon -->
 						<div class="footer__contact__phone__item__icon">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
