--- a/index.html
+++ b/index.html
@@ -49,14 +49,13 @@
 				</div>
 
 				<div class="header__desktop__pages">
-					<a href="" >INICIO</a>
-					<a href="" >ACERCA DE</a>
-					<a href="" >OFERTA DE SERVICIOS</a>
-					<a href="" >PRODUCTOS</a>
-					<a href="" >¿CÓMO SOY DISTRIBUIDOR?</a>
-					<a href="" >BLOG</a>
-					<a href="" >CONTACTO</a>
-
+					<a class="header__desktop__pages--active" href="" >INICIO<hr></a>
+					<a class="header__desktop__pages--two" href="" >ACERCA DE<hr></a>
+					<a class="header__desktop__pages--three" href="" >OFERTA DE SERVICIOS<hr></a>
+					<a class="header__desktop__pages--four" href="" >PRODUCTOS<hr></a>
+					<a class="header__desktop__pages--five" href="" >¿CÓMO SOY DISTRIBUIDOR?<hr></a>
+					<a class="header__desktop__pages--six" href="" >BLOG<hr></a>
+					<a class="header__desktop__pages--seven" href="" >CONTACTO<hr></a>
 				</div>
 				
 			
