--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
 	</main>
 
 	<footer class="footer">
-
-
+		<h1>2023 Ya no pago luz. Todos los derechos reservados. | Por Licorne Marketing Digital</h1>
 	</footer>
 
 	
