--- a/index.html
+++ b/index.html
@@ -212,6 +212,39 @@
 
 		</div>
 
+		<div class="reduce_costs">
+			<dix class="container-sm">
+
+				<div class="reduce_costs__grid">
+					<div class="reduce_costs__grid__item">
+						<div class="reduce_costs__grid__item__icon">
+							<img href="./img/ahorro.png" alt="ahorro" width="100%" height="100%"/>
+						</div>
+	
+						<p>Ahorra dinero y energía</p>
+					</div>
+	
+					<div class="reduce_costs__grid__item">
+						<div class="reduce_costs__grid__item__icon">
+							<img href="./img/certificado.png" alt="certificado" width="100%" height="100%"/>
+						</div>
+	
+						<p>Equipo certificado</p>
+					</div>
+	
+					<div class="reduce_costs__grid__item">
+						<div class="reduce_costs__grid__item__icon">
+							<img href="./img/precio.png" alt="precio" width="100%" height="100%"/>
+						</div>
+	
+						<p>Precios competitivos</p>
+					</div>
+				</div>
+
+
+			</dix>
+		</div>
+
 
 	</main>
 
