--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
 		<div class="hero">
 
 			<!-- Slider main container -->
-			<div class="swiper">
+			<div class="swiper" >
 					<!-- Additional required wrapper -->
 					<div class="swiper-wrapper">
 						
 						<!-- Slides -->
-						<div class="swiper-slide hero__form--one">
+						<div class="swiper-slide  hero__form--one">
 
 							<div class="container-sm">
 
@@ -191,9 +191,6 @@
 						</div>
 
 					</div>
-
-				<!-- If we need pagination -->
-				<div class="swiper-pagination"></div>
 	
 			</div>
 
@@ -218,7 +215,7 @@
 				<div class="reduce_costs__grid">
 					<div class="reduce_costs__grid__item">
 						<div class="reduce_costs__grid__item__icon">
-							<img href="./img/ahorro.png" alt="ahorro" width="100%" height="100%"/>
+							<img src="/img/ahorro.png" alt="ahorro" width="100%" height="100%"/>
 						</div>
 	
 						<p>Ahorra dinero y energía</p>
@@ -226,7 +223,7 @@
 	
 					<div class="reduce_costs__grid__item">
 						<div class="reduce_costs__grid__item__icon">
-							<img href="./img/certificado.png" alt="certificado" width="100%" height="100%"/>
+							<img src="/img/certificado.png" alt="certificado" width="100%" height="100%"/>
 						</div>
 	
 						<p>Equipo certificado</p>
@@ -234,7 +231,7 @@
 	
 					<div class="reduce_costs__grid__item">
 						<div class="reduce_costs__grid__item__icon">
-							<img href="./img/precio.png" alt="precio" width="100%" height="100%"/>
+							<img src="/img/precio.png" alt="precio" width="100%" height="100%"/>
 						</div>
 	
 						<p>Precios competitivos</p>
