--- a/index.html
+++ b/index.html
@@ -238,6 +238,11 @@
 					</div>
 				</div>
 
+				<div class="reduce_costs__text">
+					<h1>Reduce costos de Luz y gas.</h1>
+					<p>Paneles solares y calentadores ideales para la industria, comercios, casa habitación y residencias.</p>
+				</div>
+
 
 			</dix>
 		</div>
