--- a/index.html
+++ b/index.html
@@ -247,6 +247,14 @@
 			</dix>
 		</div>
 
+		<div class="promotion">
+			<div class="container-sm">
+				<h1>¡Adquiere la promoción del mes!</h1>
+				<p>Oferta de Panel Solar de 360w, instalado y trabajando con Microinversores a $8.990 cada uno. *Disponible hasta agotar existencias.</p>
+			</div>
+
+		</div>
+
 
 	</main>
 
