--- a/index.html
+++ b/index.html
@@ -255,6 +255,46 @@
 
 		</div>
 
+		<div class="win_win">
+			<div class="container-sm">
+				<div class="win_win__text">
+					<h1>¡Empieza a ganar ayudando a ahorrar!</h1>
+					<h2>¡Distribuye paneles y calentadores solares!</h2>
+					<p>México se encuentra en expansión en el mercado de las energías alternativas, se espera que en los próximos años este incremento sea considerablemente mayor. Si estás interesado en distribuir nuestros productos, llámanos para recibir más información y sepas nuestros beneficios.</p>
+					<h4>¡Ven y Forma parte de nuestro equipo!</h4>
+					<a class="win_win__text__button">¡Comienza a ganar!</a>
+				</div>
+				<div class="win_win__imagen">
+					<img src="./img/casas.png" alt="casas" width="100%" height="100%" />
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="our_products">
+			<div class="container-sm">
+				
+			</div>
+
+		</div>
+
+		<div class="sale">
+			<div class="container-sm">
+
+				<div class="sale__imagen">
+					<img src="./img/palmeras.png" alt="casas" width="100%" height="100%" />
+				</div>
+
+				<div class="sale__text">
+					<h1>Venta e Instalación de Paneles Solares</h1>
+					<p>Paneles solares, diseño e instalación de sistemas con energía solar fotovoltaica, térmica solar e iluminación led, ahorro de energía.</p>
+					<a class="sale__text__button">¡Conócenos!</a>
+				</div>
+
+			</div>
+		</div>
+
 
 	</main>
 
