--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
 			<div class="container-sm">
 				<h1>¡Adquiere la promoción del mes!</h1>
 				<p>Oferta de Panel Solar de 360w, instalado y trabajando con Microinversores a $8.990 cada uno. *Disponible hasta agotar existencias.</p>
+				<a class="promotion__button"  href="" >¡Quiero una cotización!</a>
 			</div>
 
 		</div>
@@ -277,7 +278,6 @@
 
 				<div class="our_products__text">
 					<h1>¡Nuestros productos más vendidos!</h1>
-					<a class="our_products__text__button"  href="" >¡Quiero una cotización!</a>
 				</div>
 
 				<div class="our_products__carousel">
