--- a/index.html
+++ b/index.html
@@ -273,6 +273,21 @@
 
 		</div>
 
+		<div class="idea">
+			<div class="container-sm">
+
+				<div class="idea__imagen">
+					<img src="./img/paneles.png" alt="paneles" width="100%" height="100%" />
+				</div>
+
+				<div class="idea__text">
+					<h1>Una buena idea es...</h1>
+					<p>implementar paneles solares como parte de tu casa e industria</p>
+				</div>
+
+			</div>
+		</div>
+
 		<div class="our_products">
 			<div class="container-sm">
 
