--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 			<div class="container-sm">
 
 				<div class="idea__imagen">
-					<img src="./img/paneles.png" alt="paneles" width="100%" height="100%" />
+					<img src="./img/paneles.jpg" alt="paneles" width="100%" height="100%" />
 				</div>
 
 				<div class="idea__text">
