--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 				</div>
 
 				<div class="header__desktop__pages">
-					<a class="header__desktop__pages--active" href="" >INICIO<hr></a>
-					<a class="header__desktop__pages--two" href="" >ACERCA DE<hr></a>
+					<a class="header__desktop__pages--one" href="" >INICIO<hr></a>
+					<button class="header__desktop__pages--two" href="" >ACERCA DE<hr></button>
 					<a class="header__desktop__pages--three" href="" >OFERTA DE SERVICIOS<hr></a>
 					<a class="header__desktop__pages--four" href="" >PRODUCTOS<hr></a>
 					<a class="header__desktop__pages--five" href="" >¿CÓMO SOY DISTRIBUIDOR?<hr></a>
@@ -94,8 +94,12 @@
 
 			<div class="menu__link">
 				<a class="menu__link--one" href="" >INICIO</a><hr>
-				<a class="menu__link--two" href="" >ACERCA DE</a><hr>
-				<a class="menu__link--three" href="" >OFERTA DE SERVICIOS</a><hr>
+				<button href="" >ACERCA DE</button>
+				<div class="menu__link__submenu">
+					<a class="menu__link--two" href="" >NOSOTROS</a><hr>
+					<a class="menu__link--two" href="" >GALERIA</a>
+				</div>
+				<hr><a class="menu__link--three" href="" >OFERTA DE SERVICIOS</a><hr>
 				<a class="menu__link--four" href="" >PRODUCTOS</a><hr>
 				<a class="menu__link--five" href="" >¿CÓMO SOY DISTRIBUIDOR?</a><hr>
 				<a class="menu__link--six" href="" >BLOG</a><hr>
@@ -104,6 +108,11 @@
 			
 		</div>
 
+	</nav>
+
+	<nav class="submenu">
+		<a href="" >Nosotros</a>
+		<a href="" >Galeria</a>
 	</nav>
 
 	<aside class="media">
