--- a/nosotros.html
+++ b/nosotros.html
@@ -157,6 +157,52 @@
 	<!-- MAIN -->
 	<main>
 
+		<div class="hero_us"></div>
+
+		<div class="us">
+			<div class="container-sm">
+				<div class="us__text">
+					<h1>Nosotros</h1>
+					<p></p>
+				</div>
+				<div class="us__imagen">
+					<img src="./img/nos.1.png" alt="us" width="100%" height="100%" />
+				</div>
+			</div>
+		</div>
+
+		<div class="certification">
+			<div class="container-sm">
+				<h1>CONTAMOS CON CERTIFICACIONES CONFIABLES</h1>
+				<div class="certification__grid">
+					<div class="certification__grid_img">
+						<img src="./img/firco.png" alt="marcaOne" width="70%" height="100%" />
+					</div>
+
+					<div class="certification__grid_img">
+						<img src="./img/undp.png" alt="marcaTwo" width="100%" height="100%" />
+					</div>
+
+					<div class="certification__grid_img">
+						<img src="./img/ance.png" alt="marcaThree" width="90%" height="100%" />
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="goal">
+			<div class="container-sm">
+
+				<div class="goal__imagen">
+					<img src="./img/poste-f.png" alt="Poste_f" width="100%" height="100%" />
+				</div>
+				<div class="goal__text"></div>
+
+			</div>
+
+		</div>
+
 	</main>
 
 	<footer class="footer">
