--- a/nosotros.html
+++ b/nosotros.html
@@ -197,7 +197,21 @@
 				<div class="goal__imagen">
 					<img src="./img/poste-f.png" alt="Poste_f" width="100%" height="100%" />
 				</div>
-				<div class="goal__text"></div>
+				<div class="goal__text">
+
+					<div class="goal__text__one">
+						<h1>Tenemos como meta...</h1>
+						<p></p>
+					</div>
+
+					<div class="goal__text__one">
+						<h1>Tenemos como meta...</h1>
+						<p></p>
+					</div>
+
+					<a class="goal__text__button" href="" >¡Comienza hoy!</a>
+
+				</div>
 
 			</div>
 
