--- a/nosotros.html
+++ b/nosotros.html
@@ -163,7 +163,12 @@
 			<div class="container-sm">
 				<div class="us__text">
 					<h1>Nosotros</h1>
-					<p></p>
+					<p>Nuestra empresa forma parte del núcleo de personas que viven afectadas por losincrementos de luz y el uso inadecuado de energía. En busca de encontrar una
+						soluciónpara contrarrestar el cambio climático, comenzamos hace ya más de10 años, con lacreación de sistemas energéticos que se generan a través del viento
+						y el sol, los cuales son totalmente eficientes. Nuestro motivo para seguir adelante espoder ofrecerte energía renovable para que reduzcas gastos.</p>
+					
+					<p>Con el paso de los años nos hemos consolidado como una empresa de alta calidad yprofesionalismo en las soluciones energéticas. Nuestros proyectos son de suma
+						importancia en el país, en asuntos gubernamentales a nivel estatal y municipal,tanto comercial como residencial.</p>
 				</div>
 				<div class="us__imagen">
 					<img src="./img/nos.1.png" alt="us" width="100%" height="100%" />
