--- a/nosotros.html
+++ b/nosotros.html
@@ -206,12 +206,14 @@
 
 					<div class="goal__text__one">
 						<h1>Tenemos como meta...</h1>
-						<p></p>
+						<p>Ofrecerte diseños de acuerdo a tus necesidades, así comoproductos de calidad, creados a través de un sistema que
+							esté perfilado en el cuidado de la ecología y el bolsillo dequienes requieran de nuestros servicios.</p>
 					</div>
 
 					<div class="goal__text__one">
-						<h1>Tenemos como meta...</h1>
-						<p></p>
+						<h1>Somos una empresa líder...</h1>
+						<p>Estamos enfocados en ser una empresa líder a nivel nacionalofreciendo soluciones de energía, apoyando a nuestros
+							clientes en reducción de gastos y al mismo tiempo cuidandoel medio ambiente día a día.</p>
 					</div>
 
 					<a class="goal__text__button" href="" >¡Comienza hoy!</a>
