--- a/nosotros.html
+++ b/nosotros.html
@@ -49,7 +49,7 @@
 				</div>
 
 				<div class="header__desktop__pages">
-					<a class="header__desktop__pages--one" href="" >INICIO<hr></a>
+					<a class="header__desktop__pages--one" href="./index.html" >INICIO<hr></a>
 					<button class="header__desktop__pages--two" href="" >ACERCA DE<hr></button>
 					<a class="header__desktop__pages--three" href="" >OFERTA DE SERVICIOS<hr></a>
 					<a class="header__desktop__pages--four" href="" >PRODUCTOS<hr></a>
