--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 			</div>
 
 			<div class="menu__link">
-				<a class="menu__link--one" href="" >INICIO</a><hr>
+				<a class="menu__link--one" href="./index.html" >INICIO</a><hr>
 				<button href="" >ACERCA DE</button>
 				<div class="menu__link__submenu">
-					<a class="menu__link--two" href="" >NOSOTROS</a><hr>
+					<a class="menu__link--two" href="./nosotros.html" >NOSOTROS</a><hr>
 					<a class="menu__link--two" href="" >GALERIA</a>
 				</div>
 				<hr><a class="menu__link--three" href="" >OFERTA DE SERVICIOS</a><hr>
@@ -111,7 +111,7 @@
 	</nav>
 
 	<nav class="submenu">
-		<a href="" >Nosotros</a>
+		<a href="./nosotros.html" >Nosotros</a>
 		<a href="" >Galeria</a>
 	</nav>
 
