--- a/nosotros.html
+++ b/nosotros.html
@@ -50,7 +50,7 @@
 
 				<div class="header__desktop__pages">
 					<a class="header__desktop__pages--one" href="./index.html" >INICIO<hr></a>
-					<button class="header__desktop__pages--two" href="" >ACERCA DE<hr></button>
+					<button class="header__desktop__pages--two">ACERCA DE<hr></button>
 					<a class="header__desktop__pages--three" href="" >OFERTA DE SERVICIOS<hr></a>
 					<a class="header__desktop__pages--four" href="" >PRODUCTOS<hr></a>
 					<a class="header__desktop__pages--five" href="" >¿CÓMO SOY DISTRIBUIDOR?<hr></a>
@@ -93,10 +93,10 @@
 			</div>
 
 			<div class="menu__link">
-				<a class="menu__link--one" href="" >INICIO</a><hr>
+				<a class="menu__link--one" href="./index.html" >INICIO</a><hr>
 				<button href="" >ACERCA DE</button>
 				<div class="menu__link__submenu">
-					<a class="menu__link--two" href="" >NOSOTROS</a><hr>
+					<a class="menu__link--two" href="./nosotros.html" >NOSOTROS</a><hr>
 					<a class="menu__link--two" href="" >GALERIA</a>
 				</div>
 				<hr><a class="menu__link--three" href="" >OFERTA DE SERVICIOS</a><hr>
@@ -111,7 +111,7 @@
 	</nav>
 
 	<nav class="submenu">
-		<a href="" >Nosotros</a>
+		<a href="./nosotros.html" >Nosotros</a>
 		<a href="" >Galeria</a>
 	</nav>
 
