--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 				</div>
 
 				<div class="header__desktop__pages">
-					<a class="header__desktop__pages--one" href="" >INICIO<hr></a>
-					<button class="header__desktop__pages--two" href="" >ACERCA DE<hr></button>
+					<a class="header__desktop__pages--one" href="./index.html" >INICIO<hr></a>
+					<button class="header__desktop__pages--two">ACERCA DE<hr></button>
 					<a class="header__desktop__pages--three" href="" >OFERTA DE SERVICIOS<hr></a>
 					<a class="header__desktop__pages--four" href="" >PRODUCTOS<hr></a>
 					<a class="header__desktop__pages--five" href="" >¿CÓMO SOY DISTRIBUIDOR?<hr></a>
