--- a/nosotros.html
+++ b/nosotros.html
@@ -94,7 +94,7 @@
 
 			<div class="menu__link">
 				<a class="menu__link--one" href="./index.html" >INICIO</a><hr>
-				<button href="" >ACERCA DE</button>
+				<button class="menu__link--two">ACERCA DE</button>
 				<div class="menu__link__submenu">
 					<a class="menu__link--two" href="./nosotros.html" >NOSOTROS</a><hr>
 					<a class="menu__link--two" href="" >GALERIA</a>
@@ -155,7 +155,7 @@
 	</aside>
 
 	<!-- MAIN -->
-	<main>
+	<main class="main">
 
 		<div class="hero_us"></div>
 
