--- a/galeria.html
+++ b/galeria.html
@@ -156,6 +156,14 @@
 	<!-- MAIN -->
 	<main class="main">
 
+        <div class="hero_galeria"></div>
+        <div class="products">
+            <div class="container-sm">
+                <h1>PANELES SOLARES, CALENTADORES SOLARES E ILUMINACIÓN LED</h1>
+                <p>Observa nuestro trabajo y ahorra en el consumo de energía eléctrica.</p>
+            </div>
+        </div>
+
 	</main>
 
 	<footer class="footer">
