--- a/nosotros.html
+++ b/nosotros.html
@@ -231,7 +231,7 @@
 						importancia en el país, en asuntos gubernamentales a nivel estatal y municipal,tanto comercial como residencial.</p>
 				</div>
 				<div class="us__imagen">
-					<img src="./img/nos.1.png" alt="us" width="100%" height="100%" />
+					<img src="./img/us/nos.1.png" alt="us" width="100%" height="100%" />
 				</div>
 			</div>
 		</div>
@@ -241,15 +241,15 @@
 				<h1>CONTAMOS CON CERTIFICACIONES CONFIABLES</h1>
 				<div class="certification__grid">
 					<div class="certification__grid_img">
-						<img src="./img/firco.png" alt="marcaOne" width="70%" height="100%" />
+						<img src="./img/us/firco.png" alt="marcaOne" width="70%" height="100%" />
 					</div>
 
 					<div class="certification__grid_img">
-						<img src="./img/undp.png" alt="marcaTwo" width="100%" height="100%" />
+						<img src="./img/us/undp.png" alt="marcaTwo" width="100%" height="100%" />
 					</div>
 
 					<div class="certification__grid_img">
-						<img src="./img/ance.png" alt="marcaThree" width="90%" height="100%" />
+						<img src="./img/us/ance.png" alt="marcaThree" width="90%" height="100%" />
 					</div>
 
 				</div>
@@ -260,7 +260,7 @@
 			<div class="container-sm">
 
 				<div class="goal__imagen">
-					<img src="./img/poste-f.png" alt="Poste_f" width="100%" height="100%" />
+					<img src="./img/us/poste-f.png" alt="Poste_f" width="100%" height="100%" />
 				</div>
 				<div class="goal__text">
 
@@ -292,7 +292,7 @@
 					<div class="situation__grid__item">
 
 						<div class="situation__grid__item__logo">
-							<img src="./img/estudio.png" alt="studio" width="100%" height="100%" />
+							<img src="./img/us/estudio.png" alt="studio" width="100%" height="100%" />
 						</div>
 						<h2>ESTUDIO</h2>
 						<p>Pensando en el bienestar de nuestra gente,analizamos la situación actual energética
@@ -302,7 +302,7 @@
 					<div class="situation__grid__item">
 
 						<div class="situation__grid__item__logo">
-							<img src="./img/desarrollo.png" alt="desarrollo" width="100%" height="100%" />
+							<img src="./img/us/desarrollo.png" alt="desarrollo" width="100%" height="100%" />
 						</div>
 						<h2>DESARROLLO</h2>
 						<p>Con base al estudio previo, desarrollamos ycuantificamos los ahorros potenciales, así
@@ -312,7 +312,7 @@
 					<div class="situation__grid__item">
 
 						<div class="situation__grid__item__logo">
-							<img src="./img/aplicacion.png" alt="studio" width="100%" height="100%" />
+							<img src="./img/us/aplicacion.png" alt="studio" width="100%" height="100%" />
 						</div>
 						<h2>APLICACIÓN</h2>
 						<p>Contamos con personal capacitado parallevar a cabo la tarea de aplicar desarrollos
@@ -322,7 +322,7 @@
 					<div class="situation__grid__item">
 
 						<div class="situation__grid__item__logo">
-							<img src="./img/monitoreo.png" alt="studio" width="100%" height="100%" />
+							<img src="./img/us/monitoreo.png" alt="studio" width="100%" height="100%" />
 						</div>
 						<h2>MONITOREO</h2>
 						<p>Mediante un monitoreo de margen de consumomantenemos el aprovechamiento de la energía
