--- a/servicios.html
+++ b/servicios.html
@@ -291,6 +291,7 @@
 				<h1 class="title">Nuestros Servicios</h1>
 			</div>
 
+			<!-- //*Fotovoltaico*/ -->
 			<div class="our_services__fotovoltaico ">
 					<div class="our_services__fotovoltaico__text container-sm">
 						<h1>Fotovoltaico</h1>
@@ -313,6 +314,21 @@
 				<div class="our_services__fotovoltaico__imagen">
 					<img src="./img/services/fotovol.png" alt="services" width="100%" height="100%" />
 				</div>
+			</div>
+
+			<!-- //*Residencial*/ -->
+			<div class="our_services__residencial">
+
+				<div class="our_services__residencial__imagen">
+					<img src="./img/services/residen.png" alt="services" width="100%" height="100%" />
+				</div>
+
+				<div class="our_services__residencial__text container-sm">
+					<h1>Residencial</h1>
+					<p>Nuestra variedad de equipos están aptos para serempleados en cualquier tipo de proyecto, cumpliendo
+						con ello, las necesidades de cada cliente en ahorro deenergía y dinero.</p>
+				</div>
+
 			</div>
 				
 		</div>
